--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
                 { name: "Breaded Fish", baseCalories: 244, unit: 'fish' },
                 { name: "Balti Pie", baseCalories: 394, unit: 'pie' },
                 { name: "ALDI KFC", baseCalories: 900, unit: 'half pack' },
-                { name: "Francesinha", baseCalories: 1500, unit: 'item' }
+                { name: "Francesinha", baseCalories: 1500, unit: 'item' },
+                { name: "Iceland brand new premium quality set of meats and sides", baseCalories: 1500, unit: 'item' }
             ],
             sauces: [
                 { name: "Korma Sauce", baseCalories: 302, unit: 'half jar' },
@@ -566,4 +567,5 @@
     </script>
 </body>
 </html>
+
 
