--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
                 { name: "Pancetta", baseCalories: 236, unit: 'half pack' },
                 { name: "Sausages", baseCalories: 76, unit: 'sausage' },
                 { name: "Pork Strips", baseCalories: 215, unit: '150g' },
+                { name: "Beef Mince (10%)", baseCalories: 215, unit: '125g' },
+                { name: "Pork Mince (12%)", baseCalories: 230, unit: '125g' },
+                { name: "Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
                 { name: "Chicken Thighs", baseCalories: 186, unit: '100g' },
                 { name: "Chicken Tikka", baseCalories: 205, unit: '125g' },
                 { name: "Thin Steaks", baseCalories: 146, unit: 'steak' },
@@ -230,13 +233,16 @@
                 { name: "Red Pesto", baseCalories: 236, unit: 'half jar' },
                 { name: "Ricotta & Red Pepper Pesto", baseCalories: 228, unit: 'half jar' },
                 { name: "Peanut Butter", baseCalories: 156, unit: '25g' },
-                { name: "Carbonara", baseCalories: 185, unit: 'serving' }
+                { name: "Carbonara", baseCalories: 185, unit: 'serving' },
+                { name: "Maggi Spice Bag", baseCalories: 117, unit: 'pack' },
+                { name: "Spaghetti Bolognese Mix", baseCalories: 66, unit: 'half pack' }
             ],
             sides: [
                 { name: "Chips", baseCalories: 167, unit: '100g' },
                 { name: "Rice", baseCalories: 340, unit: '0.5 cup' },
                 { name: "Pasta", baseCalories: 160, unit: '100g' },
                 { name: "Mash", baseCalories: 106, unit: '100g' },
+                { name: "Pasta & Sauce Mix", baseCalories: 221, unit: 'half pack' },              
                 { name: "Eggs", baseCalories: 60, unit: 'egg' },
                 { name: "Burger Buns", baseCalories: 130, unit: 'bun' },
                 { name: "Garlic Bread", baseCalories: 135, unit: 'quarter' },
@@ -244,9 +250,6 @@
                 { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' }
             ],
             desserts: [
-                { name: "Cookie Mix", baseCalories: 250, unit: 'quarter' },
-                { name: "Brownie Mix", baseCalories: 246, unit: 'sixth' },
-                { name: "Cake Mix", baseCalories: 138, unit: 'sixth' },
                 { name: "Custard Creams", baseCalories: 64, unit: 'biscuit' },
                 { name: "Rich Tea", baseCalories: 40, unit: 'biscuit' },
                 { name: "Malted Milk", baseCalories: 43, unit: 'biscuit' },
@@ -265,7 +268,12 @@
                 { name: "White Chocolate Bar", baseCalories: 279, unit: 'half bar' },
                 { name: "Chocolate Yoghurt", baseCalories: 112, unit: 'pot' },
                 { name: "Crisps", baseCalories: 132, unit: '25g bag' },
-                { name: "Popcorn", baseCalories: 741, unit: '100g' }
+                { name: "Popcorn", baseCalories: 741, unit: '100g' },
+                { name: "Triple Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
+                { name: "Milk Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
+                { name: "White Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
+                { name: "Brownie Mix", baseCalories: 246, unit: 'sixth' },
+                { name: "Cupcake Mix", baseCalories: 138, unit: 'sixth' }
             ]
         };
 
@@ -566,6 +574,4 @@
     </script>
 </body>
 </html>
-
-
 
