--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
              breakfasts: [
                 { name: "Pain Au Chocolat", baseCalories: 188, unit: 'item' },
                 { name: "Ham & Cheese Toastie", baseCalories: 350, unit: 'item' },
+                { name: "Sliced Bread", baseCalories: 96, unit: 'slice' },
                 { name: "Nutoka Sandwhich", baseCalories: 300, unit: 'item' },
                 { name: "Peanut Butter Sandwhich", baseCalories: 315, unit: 'item' },
                 { name: "Yoghurt", baseCalories: 168, unit: 'pot' },
@@ -218,6 +219,7 @@
                 { name: "Chicken Steak", baseCalories: 270, unit: 'steak' },
                 { name: "Breaded Fish", baseCalories: 244, unit: 'fish' },
                 { name: "King Prawns", baseCalories: 67, unit: '100g' },
+                { name: "Tuna Chunks", baseCalories: 109, unit: '100g' },
                 { name: "Burgers", baseCalories: 186, unit: 'burger' },
                 { name: "Pizza", baseCalories: 400, unit: 'half pizza' },
                 { name: "ASDA Pizza", baseCalories: 1300, unit: 'half pizza' },
@@ -248,9 +250,14 @@
                 { name: "Pasta & Sauce Mix", baseCalories: 221, unit: 'half pack' },
                 { name: "Baked Beans", baseCalories: 187, unit: 'half pack' },              
                 { name: "Eggs", baseCalories: 60, unit: 'egg' },
+                { name: "Onions", baseCalories: 34, unit: '100g' },
+                { name: "Mixed Peppers", baseCalories: 25, unit: '100g' },
+                { name: "Mushrooms", baseCalories: 19, unit: '100g' },
                 { name: "Burger Buns", baseCalories: 130, unit: 'bun' },
                 { name: "Garlic Bread", baseCalories: 135, unit: 'quarter' },
                 { name: "Naan Bread", baseCalories: 400, unit: 'naan' },
+                { name: "Potato Wedges", baseCalories: 182, unit: '100g' },
+                { name: "Onion Rings", baseCalories: 221, unit: '100g' },
                 { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' }
             ],
             desserts: [
