--- a/index.html
+++ b/index.html
@@ -214,10 +214,12 @@
                 { name: "Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
                 { name: "Chicken Thighs", baseCalories: 186, unit: '100g' },
                 { name: "Chicken Tikka", baseCalories: 205, unit: '125g' },
-                { name: "Thin Steaks", baseCalories: 146, unit: 'steak' },
-                { name: "Thick Steaks", baseCalories: 188, unit: 'steak' },
-                { name: "Chicken Steak", baseCalories: 270, unit: 'steak' },
-                { name: "Breaded Fish", baseCalories: 244, unit: 'fish' },
+                { name: "Beef Thin Steaks", baseCalories: 146, unit: 'steak' },
+                { name: "Beef Thick Steaks", baseCalories: 188, unit: 'steak' },
+                { name: "Breaded Chicken Steak", baseCalories: 270, unit: 'steak' },
+                { name: "Pork Loin Steak", baseCalories: 204, unit: 'steak' },
+                { name: "Pork Shoulder Steak", baseCalories: 295, unit: 'steak' },
+                { name: "Batteerd Fish Fillet", baseCalories: 244, unit: 'fillet' },
                 { name: "King Prawns", baseCalories: 67, unit: '100g' },
                 { name: "Tuna Chunks", baseCalories: 109, unit: '100g' },
                 { name: "Burgers", baseCalories: 186, unit: 'burger' },
@@ -227,6 +229,8 @@
                 { name: "King Kebab", baseCalories: 602, unit: 'half pack' },
                 { name: "Balti Pie", baseCalories: 394, unit: 'pie' },
                 { name: "ALDI KFC", baseCalories: 900, unit: 'half pack' },
+                { name: "Chicken Nuggets", baseCalories: 44, unit: 'nugget' },
+                { name: "Chicken Dippers", baseCalories: 37, unit: 'dipper' },
                 { name: "Iceland Shanghai Beef Noodles", baseCalories: 403, unit: 'pack' },
                 { name: "Iceland Char Siu Pork & Noodles", baseCalories: 535, unit: 'pack' },
                 { name: "Francesinha", baseCalories: 1500, unit: 'item' }
@@ -244,6 +248,7 @@
             ],
             sides: [
                 { name: "Chips", baseCalories: 167, unit: '100g' },
+                { name: "Potato Wedges", baseCalories: 182, unit: '100g' },
                 { name: "Rice", baseCalories: 340, unit: 'half cup' },
                 { name: "Pasta", baseCalories: 160, unit: '100g' },
                 { name: "Mash", baseCalories: 106, unit: '100g' },
@@ -256,7 +261,8 @@
                 { name: "Burger Buns", baseCalories: 130, unit: 'bun' },
                 { name: "Garlic Bread", baseCalories: 135, unit: 'quarter' },
                 { name: "Naan Bread", baseCalories: 400, unit: 'naan' },
-                { name: "Potato Wedges", baseCalories: 182, unit: '100g' },
+                { name: "Onion Bhaji", baseCalories: 130, unit: 'bhaji' },
+                { name: "Poppadoms", baseCalories: 35, unit: 'poppadom' },
                 { name: "Onion Rings", baseCalories: 221, unit: '100g' },
                 { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' }
             ],
