--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
                 { name: "Spaghetti Bolognese Mix", baseCalories: 66, unit: 'half pack' }
             ],
             sides: [
-                { name: "Chips", baseCalories: 167, unit: '100g' },
-                { name: "Potato Wedges", baseCalories: 182, unit: '100g' },
                 { name: "Rice", baseCalories: 340, unit: 'half cup' },
                 { name: "Pasta", baseCalories: 160, unit: '100g' },
-                { name: "Mash", baseCalories: 106, unit: '100g' },
+                { name: "Potato Chips", baseCalories: 167, unit: '100g' },
+                { name: "Potato Wedges", baseCalories: 182, unit: '100g' },
+                { name: "Mashed Potato", baseCalories: 150, unit: '150g' },
                 { name: "Pasta & Sauce Mix", baseCalories: 221, unit: 'half pack' },
                 { name: "Baked Beans", baseCalories: 187, unit: 'half pack' },              
                 { name: "Eggs", baseCalories: 60, unit: 'egg' },
