--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 { name: "Breaded Chicken Steak", baseCalories: 270, unit: 'steak' },
                 { name: "Pork Loin Steak", baseCalories: 204, unit: 'steak' },
                 { name: "Pork Shoulder Steak", baseCalories: 295, unit: 'steak' },
-                { name: "Batteerd Fish Fillet", baseCalories: 244, unit: 'fillet' },
+                { name: "Battered Fish Fillet", baseCalories: 244, unit: 'fillet' },
                 { name: "King Prawns", baseCalories: 67, unit: '100g' },
                 { name: "Tuna Chunks", baseCalories: 109, unit: '100g' },
                 { name: "Burgers", baseCalories: 186, unit: 'burger' },
@@ -593,4 +593,5 @@
     </script>
 </body>
 </html>
+
 
