--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 { name: "Pork Strips", baseCalories: 215, unit: '150g' },
                 { name: "Beef Mince (10%)", baseCalories: 215, unit: '125g' },
                 { name: "Pork Mince (12%)", baseCalories: 230, unit: '125g' },
-                { name: "Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
+                { name: "Beef Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
                 { name: "Chicken Thighs", baseCalories: 186, unit: '100g' },
                 { name: "Chicken Tikka", baseCalories: 205, unit: '125g' },
                 { name: "Beef Thin Steaks", baseCalories: 146, unit: 'steak' },
@@ -593,5 +593,4 @@
     </script>
 </body>
 </html>
-
 
