--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                 { name: "Sliced Bread", baseCalories: 96, unit: 'slice' },
                 { name: "Nutoka Sandwhich", baseCalories: 300, unit: 'item' },
                 { name: "Peanut Butter Sandwhich", baseCalories: 315, unit: 'item' },
+                { name: "Thin Ham", baseCalories: 10, unit: 'slice' },
+                { name: "Cheese", baseCalories: 100, unit: 'slice' },
+                { name: "Back Bacon", baseCalories: 106, unit: 'slice' },
                 { name: "Yoghurt", baseCalories: 168, unit: 'pot' },
                 { name: "Fromage Frais", baseCalories: 42, unit: 'pot' },
                 { name: "Coffee", baseCalories: 10, unit: 'cup' },
@@ -203,7 +206,16 @@
                 { name: "Cereal (Chocolate Pillows)", baseCalories: 170, unit: '40g' },
                 { name: "Cereal (Porridge)", baseCalories: 150, unit: 'sachet' },
                 { name: "Cereal (Pecan & Maple Crisp)", baseCalories: 136, unit: '30g' },
-                { name: "Cereal (Tropical Fruits Granola)", baseCalories: 196, unit: '45g' },
+                { name: "Cereal (LIDL Artisan Baguette)", baseCalories: 293, unit: 'half' },
+                { name: "Cereal (LIDL Baguette)", baseCalories: 378, unit: 'half' },
+                { name: "Cereal (LIDL Pizza)", baseCalories: 260, unit: 'item' },
+                { name: "Cereal (LIDL Chocolate Hazelnut Croissant)", baseCalories: 313, unit: 'item' },
+                { name: "Cereal (LIDL Cinnamon Bun)", baseCalories: 397, unit: 'item' },
+                { name: "Cereal (LIDL Chocolate Hazelnut Doughnut)", baseCalories: 389, unit: 'item' },
+                { name: "Cereal (LIDL Triple Chocolate Muffin)", baseCalories: 383, unit: 'item' },
+                { name: "Cereal (LIDL Cookie)", baseCalories: 320, unit: 'item' },
+                { name: "Cereal (LIDL Brownie)", baseCalories: 308, unit: 'item' },
+                { name: "Cereal (LIDL Pastel de Nata)", baseCalories: 164, unit: 'item' }
             ],
             mains: [
                 { name: "Pancetta", baseCalories: 236, unit: 'half pack' },
@@ -253,7 +265,7 @@
                 { name: "Potato Wedges", baseCalories: 182, unit: '100g' },
                 { name: "Mashed Potato", baseCalories: 150, unit: '150g' },
                 { name: "Pasta & Sauce Mix", baseCalories: 221, unit: 'half pack' },
-                { name: "Baked Beans", baseCalories: 187, unit: 'half pack' },              
+                { name: "Baked Beans", baseCalories: 187, unit: 'half tin' },              
                 { name: "Eggs", baseCalories: 60, unit: 'egg' },
                 { name: "Onions", baseCalories: 34, unit: '100g' },
                 { name: "Mixed Peppers", baseCalories: 25, unit: '100g' },
