--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
                 { name: "Peanut Butter Sandwhich", baseCalories: 315, unit: 'item' },
                 { name: "Thin Ham", baseCalories: 10, unit: 'slice' },
                 { name: "Cheese", baseCalories: 100, unit: 'slice' },
+                { name: "Salami", baseCalories: 32, unit: 'slice' },
                 { name: "Back Bacon", baseCalories: 106, unit: 'slice' },
                 { name: "Yoghurt", baseCalories: 168, unit: 'pot' },
                 { name: "Fromage Frais", baseCalories: 42, unit: 'pot' },
@@ -234,13 +235,14 @@
                 { name: "Battered Fish Fillet", baseCalories: 244, unit: 'fillet' },
                 { name: "King Prawns", baseCalories: 67, unit: '100g' },
                 { name: "Tuna Chunks", baseCalories: 109, unit: '100g' },
+                { name: "Lasagne", baseCalories: 561, unit: 'half pack' },
                 { name: "Burgers", baseCalories: 186, unit: 'burger' },
                 { name: "Pizza", baseCalories: 400, unit: 'half pizza' },
                 { name: "ASDA Pizza", baseCalories: 1300, unit: 'half pizza' },
-                { name: "Lasagne", baseCalories: 561, unit: 'half pack' },
                 { name: "King Kebab", baseCalories: 602, unit: 'half pack' },
                 { name: "Balti Pie", baseCalories: 394, unit: 'pie' },
                 { name: "ALDI KFC", baseCalories: 900, unit: 'half pack' },
+                { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' },
                 { name: "Chicken Nuggets", baseCalories: 44, unit: 'nugget' },
                 { name: "Chicken Dippers", baseCalories: 37, unit: 'dipper' },
                 { name: "Iceland Shanghai Beef Noodles", baseCalories: 403, unit: 'pack' },
@@ -275,8 +277,7 @@
                 { name: "Naan Bread", baseCalories: 400, unit: 'naan' },
                 { name: "Onion Bhaji", baseCalories: 130, unit: 'bhaji' },
                 { name: "Poppadoms", baseCalories: 35, unit: 'poppadom' },
-                { name: "Onion Rings", baseCalories: 221, unit: '100g' },
-                { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' }
+                { name: "Onion Rings", baseCalories: 221, unit: '100g' }
             ],
             desserts: [
                 { name: "Custard Creams", baseCalories: 64, unit: 'biscuit' },
@@ -605,4 +606,5 @@
     </script>
 </body>
 </html>
+
 
