--- a/index.html
+++ b/index.html
@@ -207,16 +207,19 @@
                 { name: "Cereal (Chocolate Pillows)", baseCalories: 170, unit: '40g' },
                 { name: "Cereal (Porridge)", baseCalories: 150, unit: 'sachet' },
                 { name: "Cereal (Pecan & Maple Crisp)", baseCalories: 136, unit: '30g' },
-                { name: "Cereal (LIDL Artisan Baguette)", baseCalories: 293, unit: 'half' },
-                { name: "Cereal (LIDL Baguette)", baseCalories: 378, unit: 'half' },
-                { name: "Cereal (LIDL Pizza)", baseCalories: 260, unit: 'item' },
-                { name: "Cereal (LIDL Chocolate Hazelnut Croissant)", baseCalories: 313, unit: 'item' },
-                { name: "Cereal (LIDL Cinnamon Bun)", baseCalories: 397, unit: 'item' },
-                { name: "Cereal (LIDL Chocolate Hazelnut Doughnut)", baseCalories: 389, unit: 'item' },
-                { name: "Cereal (LIDL Triple Chocolate Muffin)", baseCalories: 383, unit: 'item' },
-                { name: "Cereal (LIDL Cookie)", baseCalories: 320, unit: 'item' },
-                { name: "Cereal (LIDL Brownie)", baseCalories: 308, unit: 'item' },
-                { name: "Cereal (LIDL Pastel de Nata)", baseCalories: 164, unit: 'item' }
+                { name: "Banana", baseCalories: 89, unit: 'item' },
+                { name: "Strawberries", baseCalories: 33, unit: '100g' },
+                { name: "Apple", baseCalories: 95, unit: 'item' },
+                { name: "LIDL Artisan Baguette", baseCalories: 293, unit: 'half' },
+                { name: "LIDL Baguette", baseCalories: 378, unit: 'half' },
+                { name: "LIDL Pizza", baseCalories: 260, unit: 'item' },
+                { name: "LIDL Chocolate Hazelnut Croissant", baseCalories: 313, unit: 'item' },
+                { name: "LIDL Cinnamon Bun", baseCalories: 397, unit: 'item' },
+                { name: "LIDL Chocolate Hazelnut Doughnut", baseCalories: 389, unit: 'item' },
+                { name: "LIDL Triple Chocolate Muffin", baseCalories: 383, unit: 'item' },
+                { name: "LIDL Cookie", baseCalories: 320, unit: 'item' },
+                { name: "LIDL Brownie", baseCalories: 308, unit: 'item' },
+                { name: "LIDL Pastel de Nata", baseCalories: 164, unit: 'item' }
             ],
             mains: [
                 { name: "Pancetta", baseCalories: 236, unit: 'half pack' },
@@ -241,6 +244,8 @@
                 { name: "ASDA Pizza", baseCalories: 1300, unit: 'half pizza' },
                 { name: "King Kebab", baseCalories: 602, unit: 'half pack' },
                 { name: "Balti Pie", baseCalories: 394, unit: 'pie' },
+                { name: "Red Pepper & Mozzarella Parcel", baseCalories: 437, unit: 'lattice' },
+                { name: "Three Cheese Lattice", baseCalories: 426, unit: 'lattice' },
                 { name: "ALDI KFC", baseCalories: 900, unit: 'half pack' },
                 { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' },
                 { name: "Chicken Nuggets", baseCalories: 44, unit: 'nugget' },
