--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                 { name: "Coffee", baseCalories: 10, unit: 'cup' },
                 { name: "Latte", baseCalories: 80, unit: 'cup' },
                 { name: "Milk", baseCalories: 70, unit: '150ml' },
+                { name: "Chocolate Fudge Milk", baseCalories: 370, unit: '500ml' },
                 { name: "Cereal (Honey Nut)", baseCalories: 119, unit: '30g' },
                 { name: "Cereal (Honey Hoops)", baseCalories: 183, unit: '30g' },
                 { name: "Cereal (Chocolate Pillows)", baseCalories: 170, unit: '40g' },
