--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
                 { name: "Beef Mince (10%)", baseCalories: 215, unit: '125g' },
                 { name: "Pork Mince (12%)", baseCalories: 230, unit: '125g' },
                 { name: "Beef Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
-                { name: "Chicken Thighs", baseCalories: 186, unit: '100g' },
+                { name: "Chicken Thigh", baseCalories: 186, unit: '100g' },
                 { name: "Chicken Tikka", baseCalories: 205, unit: '125g' },
-                { name: "Beef Thin Steaks", baseCalories: 146, unit: 'steak' },
-                { name: "Beef Thick Steaks", baseCalories: 188, unit: 'steak' },
+                { name: "Beef Thin Steak", baseCalories: 146, unit: 'steak' },
+                { name: "Beef Thick Steak", baseCalories: 188, unit: 'steak' },
                 { name: "Breaded Chicken Steak", baseCalories: 270, unit: 'steak' },
                 { name: "Pork Loin Steak", baseCalories: 204, unit: 'steak' },
                 { name: "Pork Shoulder Steak", baseCalories: 295, unit: 'steak' },
@@ -612,4 +612,5 @@
     </script>
 </body>
 </html>
+
 
