--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 { name: "Francesinha", baseCalories: 1500, unit: 'item' }
             ],
             sauces: [
-                { name: "Korma Sauce", baseCalories: 302, unit: 'half jar' },
-                { name: "Rogan Josh Sauce", baseCalories: 170, unit: 'half jar' },
-                { name: "Tikka Masala Sauce", baseCalories: 190, unit: 'half jar' },
+                { name: "Korma", baseCalories: 302, unit: 'half jar' },
+                { name: "Rogan Josh", baseCalories: 170, unit: 'half jar' },
+                { name: "Tikka Masala", baseCalories: 190, unit: 'half jar' },
                 { name: "Red Pesto", baseCalories: 236, unit: 'half jar' },
                 { name: "Ricotta & Red Pepper Pesto", baseCalories: 228, unit: 'half jar' },
                 { name: "Peanut Butter", baseCalories: 156, unit: '25g' },
@@ -612,6 +612,7 @@
     </script>
 </body>
 </html>
+
 
 
 
